- INTERMediatorOnPage.processingAfterPostOnlyContext has TWO parameters.
- DataConverter_HTMLString supports double and single quote to convert to reference character.
- DataConverter_HTMLString supports disabling HTML escaping (by specifying 'parameter' => 'noescape' ).
- When the 'transaction' set to 'none', the update processing improved and update once for single record.
- Update sample_schema_mysql.txt/sample_schema_sqlite.txt for Asset Management Sample.
- Update TestDB.fmp12/TestDB.fp7/sample_schema_filemaker.php for Asset Management Sample.
- Update TestDB.fp7 for using sample_schema_filemaker.php.
- [BUG FIX] Fix setIdValue() of INTER-Mediator.js to enable setting the value of the field to the attribute of
  the node again when specifying the IM target and displaying multiple records.
- [BUG FIX] Modified DataConverter_MySQLDateTime class. In case of NULL field, it shows '' string.
- [BUG FIX] DIV or SPAN tags data-im-control didn't recognized correctly.
- [BUG FIX] Enable handling the data including U+2028/U+2029.

Ver.4.1 (2014/2/7)
- HTML5's user defined attributes are supported. Refer the alternative former style. CLASS-IM[] style is still supported.
        class="IM[...]" -> data-im="...",
        class="_im_repeater" -> data-im-control="repeater"
        class="_im_enclosure" -> data-im-control="enclosure"
        class="_im_ignore_enc_rep" -> data-im-control="ignore_enc_rep"
        class="_im_for_noresult_" -> data-im-control="noresult"
        class="_im_post" -> data-im-control="post" (added this line after release)
        class="IM_WIDGET[...]" -> data-im-widget="..."
        name="IM[survey@q4]" -> data-im-group="...."
- Database class and DB_Proxy support requireUpdatedRecord($value) and updatedRecord() method.
  For DB_PDO class, call the requireUpdatedRecord(true) and updateRecord() returns updated and newly created record.
  For DB_FileMaker_FX class, just call updateRecord() and it returns updated and newly created record.