@@ -1,0 +1,35 @@
+<!DOCTYPE html>
+<!-- Please keep the CLASS-IM[] style target descriptions for compatibility to the paper -->
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" type="text/css" href="../sample.css"/>
+    <title>INTER-Mediator - Sample - Asset List/PostgreSQL</title>
+    <script src="contexts_PostgreSQL.php"></script>
+</head>
+<body onload="INTERMediator.construct()">
+<div id="IM_NAVIGATOR"></div>
+<table>
+    <thead>
+        <tr><th></th><th>分類</th><th>名称</th><th>メーカー</th><th>型番</th><th>取得日</th><th>破棄日</th><th></th></tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <button onclick="location.href = 'asset_detail_PostgreSQL.html?id=$';"
+                        class="IM[asset@asset_id@$onclick]">
+                    詳細</button>
+            </td>
+            <td class="IM[asset@category]"></td>
+            <td class="IM[asset@name]"></td>
+            <td class="IM[asset@manifacture]"></td>
+            <td class="IM[asset@productinfo]"></td>
+            <td class="IM[asset@purchase]"></td>
+            <td class="IM[asset@discard]"></td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
+</body>
+</html>
