@@ -1,0 +1,39 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" type="text/css" href="../sample.css"/>
+    <title>INTER-Mediator - Sample - Asset List/PostgreSQL</title>
+    <script src="contexts_PostgreSQL.php"></script>
+</head>
+<body onload="INTERMediator.construct()">
+<div id="IM_NAVIGATOR"></div>
+<table>
+    <thead>
+        <tr><th></th><th>分類</th><th>名称</th><th>メーカー</th><th>型番</th><th>取得日</th><th>破棄日</th><th></th></tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <button onclick="location.href = 'asset_detail_mod_PostgreSQL.html?id=$';"
+                        class="IM[asseteffect@asset_id@$onclick]">
+                    詳細</button>
+            </td>
+            <!--<td data-im="asseteffect@category"></td>-->
+            <td>
+                <span class="_im_enclosure">
+                    <span class="IM[category-in-list@name] _im_repeater"></span>
+                </span>
+            </td>
+            <td class="IM[asseteffect@name]"></td>
+            <td class="IM[asseteffect@manifacture]"></td>
+            <td class="IM[asseteffect@productinfo]"></td>
+            <td class="IM[asseteffect@purchase]"></td>
+            <td class="IM[asseteffect@discard]"></td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
+</body>
+</html>
