@@ -70,7 +70,9 @@
         <td>
             <a href="Sample_Asset/asset_list_SQLite.html">Japanese</a>
         </td>
-        <td></td>
+        <td>
+            <a href="Sample_Asset/asset_list_PostgreSQL.html">Japanese</a>
+        </td>
     </tr>
     <tr>
         <td>List-Detail Style Navigation Pages</td>
