@@ -73,7 +73,8 @@ Ver.4.2 (in development)
 - DataConverter_HTMLString supports double and single quote to convert to reference character.
 - DataConverter_HTMLString supports disabling HTML escaping (by specifying 'parameter' => 'noescape' ).
 - When the 'transaction' set to 'none', the update processing improved and update once for single record.
-- Update sample_schema_mysql.txt/sample_schema_sqlite.txt for Asset Management Sample.
+- New sample "Asset Management Sample" is added.
+- Update sample_schema_mysql.txt/sample_schema_sqlite.txt/sample_schema_pgsql.txt for Asset Management Sample.
 - Update TestDB.fmp12/TestDB.fp7/sample_schema_filemaker.php for Asset Management Sample.
 - Update TestDB.fp7 for using sample_schema_filemaker.php.
 - [BUG FIX] Fix setIdValue() of INTER-Mediator.js to enable setting the value of the field to the attribute of
